[tool.poetry]
name = "api-backup"
version = "0.1.0"
description = ""
authors = ["Luis Pérez <luis.perez@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.66.0"}
uvicorn = {extras = ["standard"], version = "^0.14.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
